<resources>
    <string name="app_name">BikeShare</string>
    <string name="login_form_namet">LOGIN</string>
    <string name="login_email_hint">Email address</string>
    <string name="login_password_hint">Password</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="login_register">Create an account</string>
    <string name="register_form_name">REGISTER</string>
    <string name="register_email">Email address</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Retype password</string>
    <string name="register_name">User name</string>
    <string name="register_address">Address</string>
    <string name="google_signIn_prompt">Sign in with your Google account</string>
    <string name="register_username_placeholder">Welcome, New User</string>
    <string name="register_username">Welcome, %1$s</string>
    <string name="register_more_info">Before we continue, we need some more information</string>
    <string name="signup_phone">Phone number</string>
    <string name="signup_address">Address</string>
    <string name="signup_done_btn">Next</string>
    <string name="add_new_post">New Post</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name_placeholder">User name</string>
    <string name="balance_charge_hint">Input card number and card serial to charge money to your balance</string>
    <string name="balance_withdraw_hint">Enter the amount and account number to withdraw to</string>

    <string name="google_api_key">300209814116-ksobt2t7jm04dekiagfdj2tldshhb454.apps.googleusercontent.com
</string>
</resources>
