<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.Activity.LoginActivity">
    <ImageView
        android:id="@+id/user_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_username_placeholder"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_image"/>
    <TextView
        android:id="@+id/txt_more_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_more_info"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_welcome"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_more_info">

        <EditText
            android:id="@+id/edit_sign_up_phone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/signup_phone" />

        <EditText
            android:id="@+id/edit_sign_up_address"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="text|textMultiLine"
            android:hint="@string/signup_address" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/signup_done_btn"
            android:layout_marginTop="15dp"
            android:textAlignment="center" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>